feat: add key value env vars to allow overwrite

--- a/charts/cloudrun/tests/job_test.yaml
+++ b/charts/cloudrun/tests/job_test.yaml
@@ -4,7 +4,7 @@ templates:
 tests:
   - it: should render the job manifest if type is set to job
     set:
-      type: "job"
+      type: 'job'
     asserts:
       - equal:
           path: kind
