--- a/charts/cloudrun/templates/cloudrun.yaml
+++ b/charts/cloudrun/templates/cloudrun.yaml
@@ -1,7 +1,7 @@
 {{- if eq .Values.type "service" -}}
-  {{ template "cloudrun.service" . }}
+  {{ template "serverless-helm.cloudrun.service" . }}
 {{- else if eq .Values.type "job" -}}
-  {{ template "cloudrun.job" . }}
+  {{ template "serverless-helm.cloudrun.job" . }}
 {{- else -}}
   {{ fail "A valid type of either 'service' or 'job' is required!" }}
 {{- end -}}
