--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -3,6 +3,7 @@ type: service # @schema type:string;required:true;enum:service,job;description:T
 name: serverless-helm # @schema type:string;required:true;description:Name of the CloudRun  resource to deploy. Truncated to 63 characters.
 description: null # @schema type:[string,null];required:false;description:A human-readable description of the CloudRun service.
 launchStage: 'GA' # @schema type:[string];enum:["ALPHA","BETA","GA"];required:true;description:The launch stage of the CloudRun service. Controls feature availability and SLA.
+region: 'europe-west1' # @schema type:string;default:europe-west1;required:true;description:The region to deploy the CloudRun service to.
 
 env: {} # @schema type:object;required:false;description:Environment variables to set in the CloudRun container.
 # env:
