fix(ci): validate chart without k8s

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,9 +28,7 @@ jobs:
         run: helm package chart/ --debug
 
       - name: 🔍 Verify Chart Schema
-        run: |
-          helm template chart/ | kubectl create --dry-run=client -f -
-          helm template chart/ --validate
+        run: helm template chart/ --validate
   formatting:
     name: 🎨 Code Format
     runs-on: ubuntu-latest
