fix(ci): do not validate template against k8s

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         run: helm package chart/ --debug
 
       - name: 🔍 Verify Chart Schema
-        run: helm template chart/ --validate
+        run: helm template chart/
   formatting:
     name: 🎨 Code Format
     runs-on: ubuntu-latest
